# operarius

./: .gitignore  .gitmodules  .taurignore  CONTRIBUTING.md  RAG_IMPLEMENTATION.md  RAG_QUICKSTART.md  README.md  TELEGRAM_SETUP.md  index.html  package-lock.json  package.json  proxy.py
.github/workflows/: release-desktop.yml
docs/: release-signing-checklist.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  hermes-aarch64-apple-darwin  libggml-base.dylib  libggml-metal.0.9.11.dylib  libllama.0.0.8840.dylib  llama-batched-bench  llama-bench  llama-cli  llama-completion  llama-cvector-generator  llama-debug-template-parser  llama-export-lora  llama-fit-params  llama-gguf-split  llama-imatrix  llama-mtmd-cli  llama-mtmd-debug  llama-perplexity  llama-quantize  llama-results  llama-template-analysis  llama-tokenize  llama-tts  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  setup.rs
src-tauri/src/services/: config_writer.rs  downloader.rs  hermes_manager.rs  mod.rs  setup.rs  skills_manager.rs  supervisor.rs  telegram_bridge.rs  workflow_compiler.rs
src/components/: AgentBuilder.tsx  ConnectPanel.tsx  Dashboard.tsx  RagChat.tsx  TelegramSetupPanel.tsx
src/components/AgentBuilder/: AgentBuilder.tsx
src/components/Chat/: Chat.tsx
src/components/Flowchart/: Flowchart.tsx
src/components/Onboarding/: AuthScreen.tsx  Dashboard.tsx  DownloadScreen.tsx  HermesSetup.tsx  LoadingScreen.tsx  ModelPicker.tsx  RunModelChoice.tsx
src/lib/: onboardingStore.ts  store.ts
(+1 files in other folders)
